add projectStatus
